# ratatui-simple

./: Cargo.toml  LICENSE-MIT  README.md
src/: app.rs  errors.rs  events.rs  lib.rs  main.rs  root.rs  tick_counter.rs  tui.rs
