[package]
name = "ratatui-simple"
description = "A simple example of using ratatui to create a TUI"
repository = "https://github.com/joshka/ratatui-simple"
version = "0.1.0"
authors = ["Josh McKinney <joshka@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = "0.26.0"
